; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-sd-hwdb.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-sd-hwdb.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"cannot open hwdb\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* @LOG_DEBUG, align 4
  %8 = call i32 @test_setup_logging(i32 %7)
  %9 = call i32 (...) @test_failed_enumerate()
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @log_tests_skipped_errno(i32 %13, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %3, align 4
  br label %17

15:                                               ; preds = %2
  %16 = call i32 (...) @test_basic_enumerate()
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %15, %12
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @test_failed_enumerate(...) #1

declare dso_local i32 @log_tests_skipped_errno(i32, i8*) #1

declare dso_local i32 @test_basic_enumerate(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
